--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -946,6 +946,7 @@
 			grid-template-columns: repeat(12, 1fr);
 			grid-gap: 1px;
 			width: 100%;
+			grid-column: span 12;
 		}
 		.blocks-gallery-item {
 			margin: 0;
@@ -997,6 +998,51 @@
 				height: 100%;
 				flex: 1;
 				object-fit: cover;
+			}
+			figcaption {
+				display: none;
+			}
+		}
+	}
+	&.is-style-mosaic-8.has-nested-images {
+		padding: 1px;
+		display: grid;
+		grid-template-columns: repeat(12, 1fr);
+		grid-gap: 1px;
+		width: 100%;
+		.wp-block-image {
+			margin: 0;
+			width: auto !important;
+			display: flex;
+			position: relative;
+			overflow: hidden;
+			display: none;
+			@for $i from 1 through 8 { &:nth-child(#{$i}) { display: flex; } }
+			&:nth-child(1) { grid-column: span 4; grid-row: span 3; }
+			&:nth-child(2) { grid-column: span 3; grid-row: span 4; }
+			&:nth-child(3) { grid-column: span 5; grid-row: span 4; }
+			&:nth-child(4) { grid-column: span 4; grid-row: span 8; }
+			&:nth-child(5) { grid-column: span 4; grid-row: span 4; }
+			&:nth-child(6) { grid-column: span 4; grid-row: span 4; }
+			&:nth-child(7) { grid-column: span 3; grid-row: span 3; &:before { padding-top: percentage(1 / 3); } }
+			&:nth-child(8) { grid-column: span 5; grid-row: span 3; &:before { padding-top: percentage(1 / 3); } }
+			&:before {
+				content: '';
+				display: block;
+				height: 0;
+				flex: 0 0 0;
+				padding-top: percentage(2 / 3);
+			}
+			a {}
+			img {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				flex: 1;
+				object-fit: cover;
+				object-position: center;
 			}
 			figcaption {
 				display: none;
